force-app/main/default/objects/Case/fields/EcoDrive__c.field-meta.xml
<CustomField>
    <fullName>EcoDrive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>EcoDrive</label>
    <referenceTo>EcoDrive__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>