force-app/main/default/objects/Case/fields/Issue_Category__c.field-meta.xml
<CustomField>
    <fullName>Issue_Category__c</fullName>
    <label>Issue Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Waste</fullName>
            </value>
            <value>
                <fullName>Pollution</fullName>
            </value>
            <value>
                <fullName>Environmental Damage</fullName>
            </value>
            <value>
                <fullName>Public Safety</fullName>
            </value>
            <value>
                <fullName>Infrastructure</fullName>
            </value>
            <value>
                <fullName>Animal Related</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>