force-app/main/default/objects/Case/fields/Sub_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Issue_Type__c</fullName>
    <label>Sub Issue Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Issue_Category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Illegal Dumping</fullName>
            </value>
            <value>
                <fullName>Garbage Overflow</fullName>
            </value>
            <value>
                <fullName>Plastic Waste Accumulation</fullName>
            </value>
            <value>
                <fullName>Construction Debris</fullName>
            </value>
            <value>
                <fullName>Drainage Blockage</fullName>
            </value>
            <value>
                <fullName>Air Pollution</fullName>
            </value>
            <value>
                <fullName>Water Pollution</fullName>
            </value>
            <value>
                <fullName>Noise Pollution</fullName>
            </value>
            <value>
                <fullName>Open Burning</fullName>
            </value>
            <value>
                <fullName>Tree Cutting</fullName>
            </value>
            <value>
                <fullName>Deforestation</fullName>
            </value>
            <value>
                <fullName>Park Damage</fullName>
            </value>
            <value>
                <fullName>River Encroachment</fullName>
            </value>
            <value>
                <fullName>Public Hazard</fullName>
            </value>
            <value>
                <fullName>Open Manhole</fullName>
            </value>
            <value>
                <fullName>Chemical Spill</fullName>
            </value>
            <value>
                <fullName>Sewage Leakage</fullName>
            </value>
            <value>
                <fullName>Streetlight Not Working</fullName>
            </value>
            <value>
                <fullName>Road Blockage</fullName>
            </value>
            <value>
                <fullName>Broken Public Property</fullName>
            </value>
            <value>
                <fullName>Stray Animal Issue</fullName>
            </value>
            <value>
                <fullName>Wildlife Disturbance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>